Добавил хэдэр. Выполнил flex-верстку вместо бутстрап. Сделал плавное всплытие фиксирующегося меню

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,154 @@
+/* Спецификация */
+
 @font-face {
-    font-family: Alice; /* Гарнитура шрифта */
-    src: url(../fonts/Alice/Alice-Regular.ttf); /* Путь к файлу со шрифтом */
+    font-family: Alice;
+    src: url(../fonts/Alice/Alice-Regular.ttf); 
 }
 
 @font-face {
-    font-family: Open; /* Гарнитура шрифта */
-    src: url(../fonts/Open_Sans/OpenSans-Regular.ttf); /* Путь к файлу со шрифтом */
+    font-family: Open; 
+    src: url(../fonts/Open_Sans/OpenSans-Regular.ttf); 
 }
 
 body {
 	margin: 0px;
-	font-family: Alice, Open;
+	padding: 0px;
+	font-family: Open;
 } 
+
+.fixed {
+	position: fixed;
+	z-index: 9999;
+	top: 0px;
+	transform: translateY(0);
+	transition: transform 0.9s;
+}
+
+.hidden {
+	transform: translateY(-370px);
+}
+/* Шапка */
+@media screen and (max-width: 880px) {
+	header {
+		background: white;
+		left: 0px;
+		width: 100%;
+		color: #000;
+		box-shadow: 0 2px 3px 0 rgba(0,0,0,.08);
+		font-size: 30px;
+		margin-bottom: 50px;
+		padding-bottom: 20px
+	}
+
+	.flex-container {
+	 	max-width: 1200px;
+	 	margin: 0 auto;
+	}
+
+	.logo {
+		flex: 1;
+		text-align: center;
+		margin: 10px 0px 10px 0px;;
+	}
+
+	.tel {
+		flex: 1;
+		text-align: center;
+	}
+
+	.tel a {
+		display: block;
+		margin: 10px 0px 0px 0px;
+		text-decoration: none;
+		color: #000;
+	}
+
+	.head-btn {
+		flex: 12;
+		text-align: center;
+	}
+	.head-btn button {
+		font-family: Open;
+		font-size: 30px;
+		background: none;
+		border-radius: 5px;
+		border: 1px solid;
+		box-shadow: 0 2px 3px 0 rgba(0,0,0,.08);
+		transition: 0.1s;
+		margin: 10px 0px 0px 0px;
+	}
+
+	header button:hover {
+		/*linear-gradient(45deg, #05ca, #00c36d);*/
+		border: 1px solid #098d53;
+	}
+}
+
+@media screen and (min-width: 880px) {
+	header {
+		background: white;
+		left: 0px;
+		width: 100%;
+		color: #000;
+		box-shadow: 0 2px 3px 0 rgba(0,0,0,.08);
+		font-size: 30px;
+		margin-bottom: 50px;
+	}
+
+	.flex-container {
+		display: -webkit-inline-flex;
+	 	display: flex; 
+	 	max-width: 1200px;
+	 	margin: 0 auto;
+	}
+
+	.logo {
+		margin: 10px 0px 10px 10px;;
+		flex: 5;
+	}
+
+	.tel {
+		flex: 2;
+		text-align: right;
+	}
+
+	.tel a {
+		display: block;
+		margin: 30px 40px 0px 0px;
+		text-decoration: none;
+		color: #000;
+	}
+
+	.head-btn {
+		flex: 1;
+		text-align: right;
+	}
+
+	.head-btn button {
+		font-family: Open;
+		font-size: 30px;
+		background: none;
+		border-radius: 5px;
+		border: 1px solid;
+		box-shadow: 0 2px 3px 0 rgba(0,0,0,.08);
+		transition: 0.1s;
+		margin: 30px 40px 0px 0px;
+	}
+
+	header button:hover {
+		/*linear-gradient(45deg, #05ca, #00c36d);*/
+		border: 1px solid #098d53;
+	}
+}
+
+
+/* Первый экран*/
+
+.wrapper {
+	margin: 0 auto;
+	max-width: 1200px;
+}
+
+.features {
+	height: 1500px;
+}
